src/test/deca/context/invalid/SansObjet/DeclVar-NOT-int-boolean.deca
// Description:
//    Declaration of a int variable using ! operation on a boolean variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  false; 
    int z = !false ; 
}
